--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@babel/register": "^7.4.4",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.1.0",
+    "@hot-loader/react-dom": "^16.12.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.1.0",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -61,6 +62,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "react-hot-loader": "^4.6.5"
   }
 }
