--- a/package.json
+++ b/package.json
@@ -4,10 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "bnr start",
     "lint": "eslint --debug src/",
     "lint:write": "eslint --debug src/ --fix",
     "prettier": "prettier --write"
+  },
+  "betterScripts": {
+    "start": {
+      "command": "webpack --config ./config/webpack.client.config.js",
+      "env": {
+        "NODE_PATH": "./src",
+        "NODE_ENV": "development",
+        "HOST": "127.0.0.1",
+        "PORT": 3030,
+        "SSR_API_HOST": "",
+        "RESOURCE_URL_PATH_PREFIX": "/assets/",
+        "SERVER_ENV": "development"
+      }
+    }
   },
   "husky": {
     "hooks": {
@@ -43,15 +57,20 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/polyfill": "7.2.5",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@babel/register": "^7.4.4",
+    "@babel/runtime": "^7.3.1",
     "@hot-loader/react-dom": "^16.12.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.1.0",
+    "better-npm-run": "^0.1.1",
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -63,7 +82,21 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
     "prettier": "^2.3.0",
+    "react-dev-utils": "^5.0.2",
     "react-hot-loader": "^4.6.5",
-    "typescript": "^4.1.3"
+    "terser-webpack-plugin": "^1.2.3",
+    "typescript": "^4.1.3",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-middleware": "^3.5.2",
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-hot-server-middleware": "^0.6.0"
+  },
+  "dependencies": {
+    "react": "16.10.2",
+    "react-dom": "16.10.2",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.2.0",
+    "connected-react-router": "^6.4.0"
   }
 }
