--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/node": "^15.3.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
+    "app-root-path": "^2.2.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.1.0",
     "better-npm-run": "^0.1.1",
@@ -84,6 +85,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "express": "^4.17.0",
     "express-useragent": "^1.0.15",
+    "global-tunnel-ng": "^2.7.1",
     "husky": "^6.0.0",
     "ip": "^1.1.5",
     "nodemon": "^1.18.10",
@@ -96,7 +98,8 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.5.2",
     "webpack-hot-middleware": "^2.24.3",
-    "webpack-hot-server-middleware": "^0.6.0"
+    "webpack-hot-server-middleware": "^0.6.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "react": "16.10.2",
