--- a/.babelrc
+++ b/.babelrc
@@ -14,6 +14,7 @@
     "@babel/typescript"
   ],
   "plugins": [
+    "@loadable/babel-plugin",
     "@babel/plugin-transform-runtime",
     "@babel/plugin-transform-regenerator",
     "react-hot-loader/babel",
