--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "bnr start",
     "build": "run-s build:server build:client",
-    "build:client": "bnr webpack:prod:client",
-    "build:server": "bnr webpack:prod:server",
+    "build:client": "bnr build:prod:client",
+    "build:server": "bnr build:prod:server",
     "lint": "eslint --debug src/",
     "lint:write": "eslint --debug src/ --fix",
     "prettier": "prettier --write"
@@ -21,11 +21,10 @@
         "HOST": "127.0.0.1",
         "PORT": 3030,
         "SSR_API_HOST": "http://localhost:8081",
-        "RESOURCE_URL_PATH_PREFIX": "/assets/",
-        "SERVER_ENV": "development"
+        "RESOURCE_URL_PATH_PREFIX": "/assets/"
       }
     },
-    "webpack:prod:server": {
+    "build:prod:server": {
       "command": "webpack --config ./config/webpack.server.config.js",
       "env": {
         "NODE_PATH": "./src",
@@ -33,7 +32,7 @@
         "RESOURCE_URL_PATH_PREFIX": "/assets/"
       }
     },
-    "webpack:prod:client": {
+    "build:prod:client": {
       "command": "webpack --config ./config/webpack.client.config.js",
       "env": {
         "NODE_PATH": "./src",
@@ -86,7 +85,10 @@
     "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.3.1",
     "@hot-loader/react-dom": "^16.12.0",
-    "@types/node": "^15.3.0",
+    "@loadable/babel-plugin": "^5.11.0",
+    "@loadable/webpack-plugin": "^5.7.1",
+    "@reduxjs/toolkit": "^1.5.0",
+    "@types/node": "^15.6.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "app-root-path": "^2.2.1",
@@ -108,13 +110,17 @@
     "express": "^4.17.0",
     "express-useragent": "^1.0.15",
     "global-tunnel-ng": "^2.7.1",
+    "http-status-codes": "^1.4.0",
     "husky": "^6.0.0",
     "ip": "^1.1.5",
+    "lodash": "^4.17.15",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.0",
     "react-dev-utils": "^5.0.2",
     "react-hot-loader": "^4.6.5",
+    "redux-logger": "^3.0.6",
+    "serialize-javascript": "^2.1.2",
     "terser-webpack-plugin": "^1.2.3",
     "typescript": "^4.1.3",
     "webpack": "^4.41.6",
@@ -122,14 +128,20 @@
     "webpack-dev-middleware": "^3.5.2",
     "webpack-hot-middleware": "^2.24.3",
     "webpack-hot-server-middleware": "^0.6.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "cookie": "^0.4.0"
   },
   "dependencies": {
     "connected-react-router": "^6.4.0",
+    "@loadable/component": "^5.13.1",
+    "@loadable/server": "^5.13.1",
     "helmet": "^3.21.2",
+    "history": "^4.9.0",
     "react": "16.10.2",
     "react-dom": "16.10.2",
+    "react-redux": "^7.0.3",
     "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-helmet": "^5.2.1"
   }
 }
