--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,9 @@
     "module": "commonjs",                  /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     "lib": ["DOM", "ESNext"],              /* Specify library files to be included in the compilation. */
     "jsx": "react",                        /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
-    "outDir": "dist",                      /* Redirect output structure to the directory. */
+    "outDir": "build",                      /* Redirect output structure to the directory. */
     "rootDir": "src",                      /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
-    "declarationDir": "dist",
+    "declarationDir": "build",
     // "tsBuildInfoFile": "./",            /* Specify file to store incremental compilation information */
     "incremental": false,
 
@@ -43,7 +43,7 @@
     "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     "rootDirs": ["src"],                   /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": [],                       /* List of folders to include type definitions from. */
-    "types": [],                           /* Type declaration files to be included in compilation. */
+    "types": ["node"],                           /* Type declaration files to be included in compilation. */
     "esModuleInterop": true,               /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
     "allowUmdGlobalAccess": true,          /* Allow accessing UMD globals from modules. */
